------------------------------------------------------------------
Version 1.0.2

Bug fixes:

* Do not report that file has changed after saving it

------------------------------------------------------------------
Version 1.0.1

Bug fixes:

* Fixed problem when too many new files appeared in upload directory

------------------------------------------------------------------
Version 1.0.0

Initial release.
