@@ -1,7 +1,15 @@
 #include <QPainter>
 #include <QPen>
+#include <QtMath>
 
 #include "graphics_edge_item.h"
+
+namespace {
+    constexpr qreal lineWidth = 2.0;
+    constexpr qreal arrowSize = 8.0;
+    const QColor lineColor(160, 160, 170);
+    const QColor lineColorLight(190, 190, 200);
+}
 
 GraphicsEdgeItem::GraphicsEdgeItem(const GraphicsNodeItem *startItem, const GraphicsNodeItem *endItem, QGraphicsItem *parent)
     : QGraphicsPathItem(parent)
@@ -13,7 +21,7 @@ GraphicsEdgeItem::GraphicsEdgeItem(const GraphicsNodeItem *startItem, const Grap
 
 QRectF GraphicsEdgeItem::boundingRect() const
 {
-    qreal extra = (this->pen().width()) / 2.0;
+    qreal extra = lineWidth + arrowSize;
     QPointF sp(this->mapFromItem(this->startItem,this->startItem->getBottomAttachPoint()));
     QPointF ep(this->mapFromItem(this->endItem,this->endItem->getTopAttachPoint()));
 
@@ -34,24 +42,45 @@ void GraphicsEdgeItem::updatePosition()
 
     qreal dh = ep.y() - sp.y();
 
-    QPointF p1(sp.x(),sp.y()+dh/2.0f);
-    QPointF p2(ep.x(),ep.y()-dh/2.0f);
+    QPointF ctrl1(sp.x(), sp.y() + dh * 0.5);
+    QPointF ctrl2(ep.x(), ep.y() - dh * 0.5);
 
     QPainterPath path;
-
     path.moveTo(sp);
-    path.lineTo(p1);
-    path.lineTo(p2);
-    path.lineTo(ep);
-
-    // this->prepareGeometryChange();
+    path.cubicTo(ctrl1, ctrl2, ep);
 
     this->setPath(path);
+
+    // Calculate arrowhead at the end point
+    qreal angle = std::atan2(ep.y() - ctrl2.y(), ep.x() - ctrl2.x());
+
+    QPointF arrowP1 = ep - QPointF(std::cos(angle + M_PI / 6) * arrowSize,
+                                    std::sin(angle + M_PI / 6) * arrowSize);
+    QPointF arrowP2 = ep - QPointF(std::cos(angle - M_PI / 6) * arrowSize,
+                                    std::sin(angle - M_PI / 6) * arrowSize);
+
+    arrowHead.clear();
+    arrowHead << ep << arrowP1 << arrowP2;
 }
 
 void GraphicsEdgeItem::paint(QPainter *painter, const QStyleOptionGraphicsItem *, QWidget *)
 {
     this->updatePosition();
-    painter->setPen(QPen(Qt::gray, 1, Qt::SolidLine, Qt::RoundCap, Qt::RoundJoin));
+
+    painter->setRenderHint(QPainter::Antialiasing, true);
+
+    // Draw the curved line with gradient effect
+    QLinearGradient gradient(this->path().pointAtPercent(0), this->path().pointAtPercent(1));
+    gradient.setColorAt(0.0, lineColorLight);
+    gradient.setColorAt(0.5, lineColor);
+    gradient.setColorAt(1.0, lineColorLight);
+
+    QPen pen(QBrush(gradient), lineWidth, Qt::SolidLine, Qt::RoundCap, Qt::RoundJoin);
+    painter->setPen(pen);
     painter->drawPath(this->path());
+
+    // Draw arrowhead
+    painter->setPen(Qt::NoPen);
+    painter->setBrush(lineColor);
+    painter->drawPolygon(arrowHead);
 }
