@@ -1,6 +1,8 @@
 ------------------------------------------------------------------
 Version 1.0.2
 
+* GUI: Improve diagram graphics with modern visual styling
+
 Bug fixes:
 
 * Do not report that file has changed after saving it
